Fix missing spacing

--- a/enrolment/static/sass/company-profile-details.scss
+++ b/enrolment/static/sass/company-profile-details.scss
@@ -1,6 +1,7 @@
 @import 'main.scss';
 
 .company-profile-details-body {
+  margin-top: 25px;
   position: relative;
   h3 {
     line-height: 1em;
